--- a/css/styler.css
+++ b/css/styler.css
@@ -1,9 +1,9 @@
-html, body { height: 100%; margin: 0; padding: 0; }
+html, body { height: 100%; margin: 20px; padding: 0; }
 
 
 #map {
 	height: 450px;
-	width: 800px;
+	width: 700px;
 
 
 }
